@@ -23,8 +23,6 @@ import org.elasticsearch.painless.symbol.Decorator.Decoration;
 import org.elasticsearch.painless.symbol.FunctionTable.LocalFunction;
 import org.elasticsearch.painless.symbol.SemanticScope.Variable;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -225,14 +223,14 @@ public class Decorations {
     public record TypeParameters(List<Class<?>> typeParameters) implements Decoration {
 
         public TypeParameters(List<Class<?>> typeParameters) {
-            this.typeParameters = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(typeParameters)));
+            this.typeParameters = List.copyOf(typeParameters);
         }
     }
 
     public record ParameterNames(List<String> parameterNames) implements Decoration {
 
         public ParameterNames(List<String> parameterNames) {
-            this.parameterNames = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(parameterNames)));
+            this.parameterNames = List.copyOf(parameterNames);
         }
     }
 
@@ -248,7 +246,7 @@ public class Decorations {
     public record CapturesDecoration(List<Variable> captures) implements Decoration {
 
         public CapturesDecoration(List<Variable> captures) {
-            this.captures = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(captures)));
+            this.captures = List.copyOf(captures);
         }
 
         public List<Variable> captures() {
